<resources>
    <string name="app_name">CoinRadar</string>

    //admob
    <string name="admob_app_id">ca-app-pub-4385372841380246~1730762372</string>
    <string name="admob_interstitialad_id">ca-app-pub-4385372841380246/9588414550</string>
    <string name="test_admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="test_admob_interstitialad_id">ca-app-pub-3940256099942544/1033173712</string>

    //bottom navigation main titles
    <string name="bottom_menu_home_title">Home</string>
    <string name="bottom_menu_notification_title">Notification</string>
    <string name="bottom_menu_item3_title">Radar</string>
    <string name="bottom_menu_community_title">Community</string>
    <string name="bottom_menu_setting_title">Setting</string>

    //home fragment tabs titles
    <string name="fragment_home_tab1_title">Coin</string>
    <string name="fragment_home_tab2_title">MarketCap</string>
    <string name="fragment_home_tab3_title">Exchange</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    //특수문자
    <string name="arrow_up">▲</string>
    <string name="arrow_down">▼</string>

    //Ticker 홀더 아이템
    <string name="ticker_holder_base_text">Coin</string>
    <string name="ticker_holder_price_text">Price</string>
    <string name="ticker_holder_rate_text">Rate</string>

    //Ticker 헤더(Top) 아이템
    <string name="ticker_top_search_hint">Search Coins(e.g BTC)</string>


    //거래소 종류
    <string-array name="exchanges_array">
        <item>Bithumb</item>
        <item>Coinone</item>
        <item>Gopax</item>
        <item>Huobi</item>
        <item>Upbit</item>
    </string-array>

    //통화 종류
    <string-array name="bithumb_currencies_array">
        <item>krw</item>
    </string-array>

    <string-array name="coingecko_currencies_array">
        <item>krw</item>
    </string-array>

    <string-array name="coinone_currencies_array">
        <item>krw</item>
    </string-array>

    <string-array name="gopax_currencies_array">
        <item>krw</item>
        <item>btc</item>
    </string-array>

    <string-array name="huobi_currencies_array">
        <item>krw</item>
        <item>eth</item>
        <item>btc</item>
        <item>hc</item>
    </string-array>

    <string-array name="upbit_currencies_array">
        <item>krw</item>
        <item>btc</item>
    </string-array>



    //뉴스 헤드라인
    <string name="news_headline">This is News Headline</string>

</resources>