<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_menu_item1"
        android:title="@string/bottom_menu_home_title"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/bottom_menu_item2"
        android:title="@string/bottom_menu_notification_title"
        android:icon="@drawable/ic_baseline_notifications_active_24"/>
    <item
        android:id="@+id/bottom_menu_item3"
        android:title="@string/bottom_menu_item3_title"/>
    <item
        android:id="@+id/bottom_menu_item4"
        android:title="@string/bottom_menu_community_title"
        android:icon="@drawable/ic_baseline_chat_24"/>
    <item
        android:id="@+id/bottom_menu_item5"
        android:title="@string/bottom_menu_info_title"
        android:icon="@drawable/ic_baseline_person_24"/>
</menu>