<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/background_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_holder_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1.5:1"
            app:layout_constraintWidth_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_holder_base"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start|center_vertical"
            android:textStyle="bold"
            android:text="@string/ticker_holder_base_text"
            android:textSize="@dimen/ticker_holder_text_size"
            app:layout_constraintWidth_percent="0.15"
            app:layout_constraintStart_toEndOf="@id/tv_holder_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_holder_price"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/ticker_holder_price_text"
            android:gravity="end|center_vertical"
            android:textStyle="bold"
            android:textSize="@dimen/ticker_holder_text_size"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toEndOf="@id/tv_holder_base"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_holder_rate"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:text="@string/ticker_holder_rate_text"
            android:gravity="end|center_vertical"
            android:textSize="@dimen/ticker_holder_text_size"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toEndOf="@id/tv_holder_price"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_holder_unnamed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintStart_toEndOf="@id/tv_holder_rate"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
